# cloudflare-companion

./: .actrc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  opentelemetry.yml  prometheus.yml
.devcontainer/flagd/: flagd.json
.devcontainer/grafana/provisioning/dashboards/main/: main-dashboard.json  opentelemetry-collector.json  spanmetrics-dashboard.json  traefik.json
.devcontainer/prometheus/: prometheus.yml
.github/: dependabot.yml  mergify.yml
.github/actions/extract-python-version/: action.yml
.github/actions/setup-python-with-rye/: action.yml
.github/actions/setup-python-with-uv/: action.yml
.github/workflows/: code.yml  containers.yml  publish.yml  test.yml
install/usr/sbin/: cloudflare-companion
scripts/: versioning.py
src/: _settings.py  cloudflare-companion  cloudflare_companion.py  events.py  logger.py  manager.py  mock.py  settings.py
src/dns_synchub/: __init__.py  __main__.py  cli.py  events.py  logger.py  manager.py  meter.py  practice.py  settings.py  telemetry.py  telemetry_constants.py  tracer.py  types.py
src/dns_synchub/events/: __init__.py  types.py
src/dns_synchub/internal/: _decorators.py  _settings.py
src/dns_synchub/mappers/: __init__.py  cloudflare.py
src/dns_synchub/pollers/: __init__.py  docker.py  traefik.py
src/dns_synchub/settings/: __init__.py  types.py
src/internal/: _decorators.py  _settings.py  _singleton.py
src/mappers/: __init__.py  cloudflare.py
src/pollers/: __init__.py  docker.py  traefik.py
tests/: test_cloudflare.py  test_docker.py  test_mamanger.py  test_mananger.py  test_traefik.py
tests/dns-synchub/: test_cloudflare.py  test_docker.py
tests/telemetry/: test_telemetry.py
types/CloudFlare/: __init__.pyi  exceptions.pyi
